--- a/kafka_nodes/source-kafka/kafka.yaml
+++ b/kafka_nodes/source-kafka/kafka.yaml
@@ -14,12 +14,18 @@ services:
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_AUTO_DELETE_TOPICS_ENABLE: "true"
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper-source:2181"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka-source:9092"
-      KAFKA_LISTENERS: "PLAINTEXT://:9092"
+      KAFKA_LISTENERS: PLAINTEXT_DOCKER://:9092,PLAINTEXT_HOST://:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT_DOCKER://kafka-source:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT_DOCKER:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_DOCKER
       Z: "zookeeper-source:2181"
       K: "kafka-source:9092"
     networks:
-      - kafka 
+      - kafka
+    ports:
+      - target: 29092
+        published: 29092
+        mode: host
     deploy:
       endpoint_mode: dnsrr
       replicas: 1
@@ -31,5 +37,5 @@ services:
         monitor: 25000ms
       restart_policy:
         condition: on-failure
-        max_attempts: 20
+        max_attempts: 2
 
